syntax = "proto3";
option csharp_namespace = "GrpcDrinks";
import "drink.proto";

package CocktailDb.Services;

service DrinksGrpc{
  rpc GetDrinks(GetDrinkRequest) returns (ListDrinksResponse);

    // Add RPC method for adding a drink
  rpc AddDrink(AddDrinkRequest) returns (AddDrinkResponse);
}

// Message for adding a drink
message AddDrinkRequest {
  string name = 1; 
}

// Response message for adding a drink
message AddDrinkResponse {
  int32 Id = 1;
}

message GetDrinkRequest {
}

message ListDrinksResponse {
    repeated CocktailDb.RPC.Models.Drink drinks = 1;  // Array
}